<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:id="@+id/playlistButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView 
        android:id="@+id/playlistTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playlist_title"
        android:layout_weight="2"/>
    
    <Button
        android:id="@+id/buttonOpenExplorer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_explorer"
        android:onClick="openCrankExplorer" 
        android:layout_weight="1"/>
    
    <Button
        android:id="@+id/buttonClearPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_playlist"
        android:onClick="clearPlaylist" 
        android:layout_weight="1"/>
	</LinearLayout>
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_playlist" />
    
    <LinearLayout 
        android:id="@+id/current_song"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/now_playing" 
        android:layout_weight="1"/>
    <TextView
        android:id="@+id/current_song_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    </LinearLayout>
    
	<LinearLayout 
        android:id="@+id/controlButtons"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       
    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:onClick="play" 
        android:layout_weight="1"/>
    
    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:onClick="stop" 
        android:layout_weight="1"/>
	</LinearLayout>
</LinearLayout>